docs/7.52/md/abennews-750.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 7.5x](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-75.htm) → 

Changes in Release 7.50

The kernel release for Release 7.50 is 7.45.

-   [Only Unicode Systems in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-unicode.htm)
    
-   [Data Types and ABAP Dictionary in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-types.htm)
    
-   [Expressions and Functions in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-expressions.htm)
    
-   [Exception Classes in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-exceptions.htm)
    
-   [Open SQL in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-open_sql.htm)
    
-   [ABAP CDS in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-abap_cds.htm)
    
-   [AMDP in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-amdp.htm)
    
-   [ABAP Unit in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-abap_unit.htm)
    
-   [RFC and APC in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-rfc.htm)
    
-   [ABAP Versions in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-abap_versions.htm)
    
-   [RFC and APC in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-rfc.htm)
    
-   [Further Changes in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-others.htm)
    

Continue
[Only Unicode Systems in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-unicode.htm)
[Data Types and ABAP Dictionary in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-types.htm)
[Expressions and Functions in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-expressions.htm)
[Exception Classes in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-exceptions.htm)
[Open SQL in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-open_sql.htm)
[ABAP CDS in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-abap_cds.htm)
[AMDP in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-amdp.htm)
[ABAP Unit in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-abap_unit.htm)
[RFC and ABAP Channels in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-rfc.htm)
[ABAP Versions in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-abap_versions.htm)
[Further Changes in Release 7.50](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-750-others.htm)