docs/7.57/md/abennews-750.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-75.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 7.50, ABENNEWS-750, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASug
gestion for improvement:)

News for Release 7.50

The kernel release for Release 7.50 is 7.45.

-   [Only Unicode Systems in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-unicode.htm)
-   [Data Types and ABAP Dictionary in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-types.htm)
-   [Assignments in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-assignments.htm)
-   [Expressions and Functions in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-expressions.htm)
-   [Exception Classes in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-exceptions.htm)
-   [ABAP SQL in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_sql.htm)
-   [ABAP CDS in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_cds.htm)
-   [AMDP in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-amdp.htm)
-   [ABAP Unit in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_unit.htm)
-   [RFC and ABAP Channels in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-rfc.htm)
-   [ABAP Versions in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_versions.htm)
-   [Further Changes in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-others.htm)

Continue
[Only Unicode Systems in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-unicode.htm)
[Data Types and ABAP Dictionary in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-types.htm)
[Assignments in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-assignments.htm)
[Expressions and Functions in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-expressions.htm)
[Exception Classes in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-exceptions.htm)
[ABAP SQL in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_sql.htm)
[ABAP CDS in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_cds.htm)
[AMDP in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-amdp.htm)
[ABAP Unit in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_unit.htm)
[RFC and ABAP Channels in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-rfc.htm)
[ABAP Versions in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-abap_versions.htm)
[Further Changes in Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750-others.htm)